# ParallelTimetables

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md  custom_mpi.cpp  custom_mpi.h  database_data_convert.py  import.cpp  import.h  input_generator.py  main.cpp  output_analysis.py  performance.cpp  performance.h  settings.cpp  settings.h  setup-machine.sh  timetable.cpp  timetable.h  timetable_remapper.py  timetable_types.h  utils.cpp  utils.h
genetic/: crossover.cpp  crossover.h  fitness.cpp  fitness.h  mutation.cpp  mutation.h  selection.cpp  selection.h
json/: json.hpp
latex/: LICENSE  bachelors.tex  literature.bib
latex/licensepage/: license.tex
latex/nipponpage/: nippon.tex
latex/res/: diagram.drawio.xml  generation-fitness-REAL-500up.eps  generation-fitness-REAL.eps  generation-fitness-multiple.eps  generation-time-three-eth-REAL.eps  generation-time-three-eth.eps  generation-time-three-wifi.eps  population-ram.eps  processes-ram-normalized.eps  processes-ram.eps  processes-times.eps  speedup-efficiency.eps
tinyxml2/: LICENSE
web/: angular-1.4.4.js  index.html  script.js  styles.css
xml/: classrooms.xsd  professors.xsd  settings.xml  settings.xsd  students.xsd  subjects.xsd
xml/autogenerated/: classrooms.xml  professors.xml  students.xml  subjects.xml
xml/handcoded/: classrooms.xml  professors.xml  students.xml  subjects.xml
